# open_claude_tag_lark

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml  run.sh
channels/example/: BUDGET.md
channels/templates/: CHANNEL.md  agents.toml
ocl/: __init__.py  __main__.py  cli.py  config.py  doctor.py  llm.py  web_admin.py  web_admin_frontend.html
ocl/agent/: context.py  loop.py  skills.py
ocl/agents/: __init__.py  action_card.py  cancel.py  config.py  cron_store.py  ledger.py  lifecycle.py  reminder_store.py  task_store.py  thread_follow.py
ocl/ambient/: config.py  heartbeat.py
ocl/gateway/: base.py  registry.py  router.py
ocl/memory/: compactor.py  embedder.py  layered.py  mem0_store.py  store.py  writer.py
ocl/runtime/: __init__.py  checkpoint.py  context.py  context_manager.py  delegation.py  dispatcher.py  handlers.py  orchestrator.py
ocl/tools/: builtins.py  capability.py  feishu_docs.py  mcp_client.py  mcp_config.py  mcp_schema.py  orchestration.py  registry.py
tests/fixtures/: fake_mcp_server.py
tests/integration/: test_context_assembly_with_mem0.py  test_memory_post_reply.py
tests/unit/: test_agent_loop_uses_gateway.py  test_compactor.py  test_curation_completion.py  test_event_idempotency.py  test_feishu_auth.py  test_feishu_doc_tools.py  test_feishu_docs.py  test_feishu_events.py  test_feishu_gateway.py  test_feishu_text.py  test_heartbeat_config.py  test_heartbeat_registration.py  test_heartbeat_service.py  test_mcp_client_integration.py  test_mcp_config_parsing.py  test_mcp_dispatch.py  test_mcp_schema_conversion.py  (+4 more)
(+14 files in other folders)
