[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-claude-tag-lark"
version = "0.1.0"
description = "Self-hostable channel-native AI teammate for Slack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.0",
    "litellm>=1.45.0",
    "mem0ai>=2.0.11",
    "tiktoken>=0.7",
    "chromadb>=0.5",
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
admin = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
open-claude-tag-lark = "ocl.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
